ajout des titres sur htmlpourmonsite.html

--- a/htmlpourmonsite.html
+++ b/htmlpourmonsite.html
@@ -5,7 +5,11 @@
 		<title>monsite</title>
 	</head>
 	<body>
-Ceci sera mon site.
+		<p>Ceci sera mon site.</p>
+		<p>J'y ajoute un titre un et un titre deux.</p>
+		<h3>ceci est le titre 1</h3>
+		<h3>ceci est le titre 2</h3>
+
 	</body>
 </html>
 
